--- a/webapps/cors/index.html
+++ b/webapps/cors/index.html
@@ -33,7 +33,7 @@
 	</div>
 	<div id="failure" class="alert alert-danger" role="alert" style="visibility: hidden; position: absolute; top: 40px; width: 100%">
     	<p><b>Der Request wurde vom Server abgelehnt.</b></p>
-    	<p>Damit er angenommen wird muss der Server http://localhost:8666 als Anfragenden zulassen. Dazu die Zeile <pre>CorsDempFilter.java:14: response.setHeader("Access-Control-Allow-Origin", "http://localhost:8666");</pre> einkommentieren und neu kompilieren.</p>
+    	<p>Damit er angenommen wird muss der Server http://localhost:8666 als Anfragenden zulassen. Dazu die Zeile <pre>CorsDemoFilter.java:14: response.setHeader("Access-Control-Allow-Origin", "http://localhost:8666");</pre> einkommentieren und neu kompilieren.</p>
     </div>
     <form id="cors-poster" action="">
         <p>
