i18n + english translation for cors

--- a/webapps/cors/index.html
+++ b/webapps/cors/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"/>
 <link href="bootstrap.min.css" rel="stylesheet">
 <title>CORS Demo</title>
+<script src="i18n.js"></script>
 <script type="text/javascript">
     var request = new XMLHttpRequest();
     var url = 'https://vulnerads.de/cors/demo';
@@ -86,102 +87,113 @@
     }
 </script>
 </head>
-<body>
+<body onLoad="changelanguage('de')">
+	<button onclick="changelanguage('de')">Deutsch</button>
+	<button onclick="changelanguage('en')">English</button>
 	<form name='cors-poster' action="">
 		<div class="row no-margin" id="level1" style="visibility:visible">
-	    		<div class="col-md-2"></div>
-			<div class="col-md-6">
-				<h1>CORS Übung</h1>
-				<p>Bleib auf dieser Seite, um die Übung abzuschließen. Nicht neu laden!</p>
+    		<div class="col-md-1"></div>
+			<div class="col-md-10">
+				<h1 id="cors_uebung"></h1>
+				<p id="dont_reload"></p>
 			</div>
-	    		<div class="col-md-4"></div>
+    		<div class="col-md-1"></div>
 		</div>
+		
+		
 		<div class="row no-margin">
-	    		<div class="col-md-2"></div>
-			<div class="col-md-2">
+    		<div class="col-md-1"></div>
+			<div class="col-md-3">
 				<div class="form-group">
-					<input type="button" class="btn btn-large" value="GET an https://vulnerads.de/cors/demo" onclick="callVulneradsGet()" />
-		    		</div>
+					<input type="button" class="btn btn-large" value="GET -> https://vulnerads.de/cors/demo" onclick="callVulneradsGet()" />
+	    		</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-7">
 				<div id="failureGet" class="alert alert-danger" role="alert" style="visibility: hidden; position: relative; width: 100%">
-			    		<p><b>Der GET Request wurde vom Server abgelehnt.</b></p>
-			  	  	<p>Damit er angenommen wird muss der Server https://attacat.de:8666 als Anfragenden zulassen. Dazu die Zeile <pre>CorsDemoFilter.java:15: response.setHeader("Access-Control-Allow-Origin", "https://attacat.de:8666");</pre> einkommentieren und vulnerads neu starten.</p>
-			    	</div>
+		    		<p id="get_reject"></p>
+			  	  	<p id="get_resolve"></p>
+		    	</div>
 				<div id="successGet" class="alert alert-success" role="alert" style="visibility: hidden; position: absolute; top:0; width: 100%">
-			    		<p><b>Der GET Request wurde vom Server bearbeitet.</b></p>
-					<p>CORS ist richtig konfiguriert.</p>
+		    		<p id="get_success"></p>
+					<p id="get_cors_correct"></p>
 				</div>
 			</div>
-			<div class="col-md-2"></div>
+			<div class="col-md-1"></div>
 		</div>
+		
+		
 		<div class="row no-margin" id="level2" style="visibility:hidden">
-	    		<div class="col-md-2"></div>
-			<div class="col-md-2">
+    		<div class="col-md-1"></div>
+			<div class="col-md-3">
 				<div class="form-group">
-					<input type="button" class="btn btn-large" value="Standard POST an https://vulnerads.de/cors/demo" onclick="callVulneradsPost()" />
-		    		</div>
+					<input type="button" class="btn btn-large" value="Default POST -> https://vulnerads.de/cors/demo" onclick="callVulneradsPost()" />
+	    		</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-7">
 				<div id="failurePost" class="alert alert-danger" role="alert" style="visibility: hidden; position: relative; width: 100%">
-			    		<p><b>Der Standard POST Request wurde vom Server abgelehnt.</b></p>
-			  	  	<p>Damit er angenommen wird muss der Server https://attacat.de:8666 als Anfragenden zulassen. Dazu die Zeile <pre>CorsDemoFilter.java:15: response.setHeader("Access-Control-Allow-Origin", "https://attacat.de:8666");</pre> einkommentieren und vulnerads neu starten.</p>
-			    	</div>
+		    		<p id="default_post_reject"></p>
+			  	  	<p id="default_post_resolve"></p>
+		    	</div>
 				<div id="successPost" class="alert alert-success" role="alert" style="visibility: hidden; position: absolute; top:0; width: 100%">
-			    		<p><b>Der Standard POST Request wurde vom Server bearbeitet.</b></p>
-					<p>CORS ist richtig konfiguriert.</p>
+		    		<p id="default_post_success"></p>
+					<p id="default_post_cors_correct"></p>
 				</div>
 			</div>
-			<div class="col-md-2"></div>
+			<div class="col-md-1"></div>
 		</div>
+		
+		
 		<div class="row no-margin" id="level3" style="visibility:hidden">
-	    		<div class="col-md-2"></div>
-			<div class="col-md-2">
+    		<div class="col-md-1"></div>
+			<div class="col-md-3">
 				<div class="form-group">
-					<input type="button" class="btn btn-large" value="Preflight POST an https://vulnerads.de/cors/demo" onclick="callVulneradsPreflight()" />
-		    		</div>
+					<input type="button" class="btn btn-large" value="Preflight POST -> https://vulnerads.de/cors/demo" onclick="callVulneradsPreflight()" />
+	    		</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-7">
 				<div id="failurePreflight" class="alert alert-danger" role="alert" style="visibility: hidden; position: relative; width: 100%">
-			    		<p><b>Der Preflight POST Request wurde vom Server abgelehnt.</b></p>
-			  	  	<p>Damit er angenommen wird muss der Server https://attacat.de:8666 als Anfragenden zulassen. Dazu die Zeile <pre>CorsDemoFilter.java:16: response.setHeader("Access-Control-Allow-Headers", "X-My-Own-Header");</pre> einkommentieren und neu kompilieren.</p>
-			    	</div>
+		    		<p id="preflight_post_reject"></p>
+		  	  	    <p id="preflight_post_resolve"></p>
+		    	</div>
 				<div id="successPreflight" class="alert alert-success" role="alert" style="visibility: hidden; position: absolute; top:0; width: 100%">
-			    		<p><b>Der Preflight POST Request wurde vom Server bearbeitet.</b></p>
-					<p>CORS ist richtig konfiguriert.</p>
+		    		<p id="preflight_post_success"></p>
+					<p id="preflight_post_cors_correct"></p>
 				</div>
 			</div>
-			<div class="col-md-2"></div>
+			<div class="col-md-1"></div>
 		</div>
+		
+		
 		<div class="row no-margin" id="level4" style="visibility:hidden">
-	    		<div class="col-md-2"></div>
-			<div class="col-md-2">
+    		<div class="col-md-1"></div>
+			<div class="col-md-3">
 				<div class="form-group">
-					<input type="button" class="btn btn-large" value="Preflight DELETE an https://vulnerads.de/cors/demo" onclick="callVulneradsDelete()" />
-		    		</div>
+					<input type="button" class="btn btn-large" value="Preflight DELETE -> https://vulnerads.de/cors/demo" onclick="callVulneradsDelete()" />
+	    		</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-7">
 				<div id="failureDelete" class="alert alert-danger" role="alert" style="visibility: hidden; position: relative; width: 100%">
-			    		<p><b>Der DELETE Request wurde vom Server abgelehnt.</b></p>
-			  	  	<p>Damit er angenommen wird muss der Server DELETE Requests zulassen. Dazu in der Zeile <pre>CorsDemoFilter.java:14: response.setHeader("Access-Control-Allow-Methods", "GET, POST, <b>DELETE</b>");</pre> ergänzen und vulnerads neu starten.</p>
-			    	</div>
+		    		<p id="delete_reject"></p>
+			  	  	<p id="delete_resolve"></p>
+		    	</div>
 				<div id="successDelete" class="alert alert-success" role="alert" style="visibility: hidden; position: absolute; top:0; width: 100%">
-			    		<p><b>Der DELETE Request wurde vom Server bearbeitet.</b></p>
-					<p>CORS ist richtig konfiguriert.</p>
+		    		<p id="delete_success"></p>
+					<p id="delete_cors_correct"></p>
 				</div>
 			</div>
-			<div class="col-md-2"></div>
+			<div class="col-md-1"></div>
 		</div>
 
+
 		<div class="row no-margin" id="win" style="visibility:hidden">
-	    		<div class="col-md-2"></div>
-			<div class="col-md-8">
+    		<div class="col-md-1"></div>
+			<div class="col-md-10">
 				<div id="successWin" class="alert alert-success" role="alert" style="position: relative; width: 100%">
-			    		<h1>Herzlichen Glückwunsch</h1>
-					<p><b>Du hast die CORS Übung erfolgreich abgeschlossen</b></p>
+		    		<h1 id="congrats"></h1>
+					<p id="finished"></p>
 				</div>
 			</div>
-			<div class="col-md-2"></div>
+			<div class="col-md-1"></div>
 		</div>
 	</form>
 	<script src="bootstrap.min.js"></script>
