always open german locale due to fixed button position

--- a/webapps/jack/visible.html
+++ b/webapps/jack/visible.html
@@ -65,7 +65,7 @@
                 <p id="win"></p>
 	        <h1 id="iphone"></h1>
             </div>
-            <iframe class="invisible" scrolling="no" width="500px" height="350px" src="https://vulnerads.de/ad/2"></iframe>
+            <iframe class="invisible" scrolling="no" width="500px" height="350px" src="https://vulnerads.de/ad/2?lang=de"></iframe>
         </div>
     </body>
 </html>
